Bicubic transform on ID channel is not bicubic #46641

Closed
opened 2015-10-30 09:13:10 +01:00 by Anna Celarek · 5 comments

System Information
Windows 10, GTX 950M

Blender Version
Blender 2.76 3bc5399

Short description of error
Bicubic transform applied on an ID channel is not bicubic (no interpolation between pixels)

Exact steps for others to reproduce the error
See the .blend
The ID channel output is transformed without interpolation, only black or white pixels.
The exactly same output, saved as file, is transformed with interpolation as expected.

related:
https://developer.blender.org/T46408
https://developer.blender.org/rB8918e089a5ef

scale.blend
scale_not_bicubic.jpg

**System Information** Windows 10, GTX 950M **Blender Version** Blender 2.76 3bc5399 **Short description of error** Bicubic transform applied on an ID channel is not bicubic (no interpolation between pixels) **Exact steps for others to reproduce the error** See the .blend The ID channel output is transformed without interpolation, only black or white pixels. The exactly same output, saved as file, is transformed with interpolation as expected. related: https://developer.blender.org/T46408 https://developer.blender.org/rB8918e089a5ef [scale.blend](https://archive.blender.org/developer/F248281/scale.blend) ![scale_not_bicubic.jpg](https://archive.blender.org/developer/F248282/scale_not_bicubic.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Anna Celarek 2015-10-30 09:13:10 +01:00
Author

Added subscriber: @AnnaCelarek

Added subscriber: @AnnaCelarek

Ok, see what you mean now. Unfortunately, it's not really simple to do with the current compositor design, because bicubic filtering will happen before the ID mask node. There is one trick tho to make an ID Mask node to have it's buffer to force bicubic filtering happen after the ID mask selection.

Will prepare patch a bit later,

Ok, see what you mean now. Unfortunately, it's not really simple to do with the current compositor design, because bicubic filtering will happen before the ID mask node. There is one trick tho to make an ID Mask node to have it's buffer to force bicubic filtering happen after the ID mask selection. Will prepare patch a bit later,

This issue was referenced by 63f2f82f92

This issue was referenced by 63f2f82f92936ce642eaa95def1179304ef0b363

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46641
No description provided.